--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "tsx script/build.ts",
     "start": "cross-env NODE_ENV=production node dist/index.cjs",
+    "sync": "$env:Path += ';C:\\Program Files\\Git\\cmd'; git add .; git commit -m 'update'; git push",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
