--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsx script/build.ts",
     "start": "cross-env NODE_ENV=production node dist/index.cjs",
     "sync": "$env:Path += ';C:\\Program Files\\Git\\cmd'; git add .; git commit -m 'update'; git push",
+    "sync:replit": "git add . && git commit -m 'update from replit' && git push origin main",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
